--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "yiisoft/yii2-faker": "~2.0.0",
         "yiisoft/yii2-sphinx": "^2.0",
         "yiisoft/yii2-authclient": "^2.2",
-        "yiisoft/yii2-redis": "~2.0.0"
+        "yiisoft/yii2-redis": "~2.0.0",
+        "2amigos/yii2-file-upload-widget": "~1.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
