--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "yiisoft/yii2-sphinx": "^2.0",
         "yiisoft/yii2-authclient": "^2.2",
         "yiisoft/yii2-redis": "~2.0.0",
-        "2amigos/yii2-file-upload-widget": "~1.0"
+        "2amigos/yii2-file-upload-widget": "~1.0",
+        "intervention/image": "^2.5"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
